--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mangochangodarkhighcontrasttheme",
   "displayName": "MangoChangoDarkHighContrastTheme",
   "description": "MangoChango Dark Theme (High Contrast)",
-  "publisher": "MangoChango",
-  "author": "MangoChango",
-  "version": "0.0.1",
+  "publisher": "linogarciavallejo",
+  "author": "Lino Garcia Vallejo",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/linogvallejo/mangochangodarkhighcontrasttheme.git"
