--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mangochangodarkhighcontrasttheme",
-  "displayName": "MangoChangoDarkHighContrastTheme",
+  "displayName": "MangoChango Dark (HighContrast) Theme",
   "description": "MangoChango Dark Theme (High Contrast)",
   "publisher": "linogarciavallejo",
   "author": "Lino Garcia Vallejo",
